feat(java): 按 pdai 对标 P0 清单补 4 组内容（final 语义 / JUC 工具类 / 读写锁 / 现代 GC 与日志）
- 新增 java/concurrent/juc-tools.md：Latch / Barrier / Semaphore / Exchanger / Phaser
  横向对比（语义差异、AQS 归属辨析、选型判据、10 条坑），order 5
- thread-safety 补第八节 {#final-and-publication}：final 的两条重排序规则、
  构造过程 this 逸出的三种场景、安全发布四方式、final != 不可变；
  happens-before 表补 final 行，面试口径补 3 条
- aqs-locks 补第八节 {#readwrite-lock}：state 高 16 位读 / 低 16 位写拆分、
  读锁的自定义共享与写饥饿、锁降级、StampedLock 三模式与四个坑、四种锁选型
- collectors 补：Shenandoah 行、收集器版本时间线（JDK8→JDK27）、
  第五节 {#zgc-shenandoah}（染色指针 + 读屏障 / 分代 ZGC / 与 Shenandoah 对比）
- tuning 补：GC 日志配置与判读（-Xlog 语法、一份 G1 日志逐行拆解、
  六种异常特征、参数生效确认）
- 并发 6 篇 order 顺延（thread-pool 5→6 ... completable-future 8→9），
  concurrent / jvm 两个导览页与高频速查表同步